--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "express": "^4.18.2"
-  }
+  "axios": "^1.6.0",
+  "express": "^4.18.2",
+  "cors": "^2.8.5",
+  "dotenv": "^16.4.5"
+}
+
 }
